k8s/base/prod/api-gateway-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: api-gateway-lb
  namespace: prod
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: 'http'
    service.beta.kubernetes.io/do-loadbalancer-tls-ports: '443'
    service.beta.kubernetes.io/do-loadbalancer-certificate-id: '2783662b-4b5a-4599-90dc-4cc537f9c072'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'api.maketou.shop'
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
